--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alberto Garcia Sola",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.20",
