--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.20",
-    "mongoose-unique-validator": "^2.0.2",
-    "underscore": "^1.9.1"
+    "mongoose-unique-validator": "^2.0.2"
   }
 }
