--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.20",
-    "mongoose-unique-validator": "^2.0.2"
+    "mongoose-unique-validator": "^2.0.2",
+    "qs": "^6.7.0"
   }
 }
