--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
