--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.3",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.1.1",
     "qs": "^6.7.0"
   }
 }
